# fer

./: Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs
src/: currency.rs  lib.rs  main.rs
src/types/: mod.rs  symbols.rs
