[package]
authors = ["Shohei Jinno <shohei.jinno@gmail.com>"]
edition = "2018"
name = "fer"
version = "0.1.0"

description = "A library for currency conversion using Foreign exchange rates API."

readme = "../README.md"
repository = "https://github.com/sjinno/fer"

keywords = ["currency", "conversion"]
license = "MIT"

[dependencies]
reqwest = {version = "0.10", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "0.2", features = ["full"]}
